force-app/main/default/objects/Contact/fields/PYR_Apple_ID__c.field-meta.xml
<CustomField>
    <fullName>PYR_Apple_ID__c</fullName>
    <description>Apple OAuth subject claim (sub) for Sign in with Apple</description>
    <label>PYR Apple ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>