force-app/main/default/objects/Contact/fields/PYR_Auth_Provider__c.field-meta.xml
<CustomField>
    <fullName>PYR_Auth_Provider__c</fullName>
    <description>The OAuth provider used by this user</description>
    <label>PYR Auth Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>