force-app/main/default/objects/Contact/fields/PYR_Google_ID__c.field-meta.xml
<CustomField>
    <fullName>PYR_Google_ID__c</fullName>
    <description>Google OAuth subject claim (sub) for Sign in with Google</description>
    <label>PYR Google ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>