force-app/main/default/objects/Contact/fields/PYR_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>PYR_Last_Login__c</fullName>
    <description>Last time the user logged into PYR</description>
    <label>PYR Last Login</label>
    <type>DateTime</type>
</CustomField>