force-app/main/default/objects/Contact/fields/PYR_User_ID__c.field-meta.xml
<CustomField>
    <fullName>PYR_User_ID__c</fullName>
    <description>Unique public user ID for PYR</description>
    <externalId>true</externalId>
    <label>PYR User ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>